# TweetSentimentalAnalysis

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sentementalanalysis.cpp  sentementalanalysis.h  tweetdatacleaner.cpp  tweetdatacleaner.h
.github/workflows/: build.yml
DataStructures/: dsstring.cpp  dsstring.h  dsvector.h
TestData/: dev-test-data.csv  dev-test-target.csv  dev-train-data.csv  dev-train-target.csv
